# adk-learning

./: .gitignore  AGENTS_SUMMARY.md  Google-ADK-2Day-Workshop.pptx  MODEL_AUTHENTICATION.md  QUICKSTART.md  README.md  WORKSHOP_GUIDE.md  pyproject.toml
basic_agent/: agent.py  root_instruction.py
basic_agent/.adk/: session.db
capstone_option1_docs_qa/: README.md  agent.py
capstone_option1_docs_qa/knowledge_base/: README.txt
capstone_option2_research_report/: README.md  agent.py
capstone_option3_support_triage/: README.md  agent.py
day1_section1_first_agent/: README.md  agent.py
day1_section1_first_agent/.adk/: session.db
day1_section2_agent_with_tools/: README.md  agent.py
day1_section2_agent_with_tools/.adk/: session.db
day1_section3_session_and_state/: README.md  agent.py  runner_example.py
day2_section1_sequential_agent/: README.md  agent.py
day2_section2_parallel_agent/: README.md  agent.py
day2_section3_loop_agent/: README.md  agent.py
day2_section4_rag_agent/: README.md  agent.py
day2_section4_rag_agent/sample_documents/: ai_agents.txt  ml_basics.txt  python_guide.txt
