[project]
name = "adk-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",
    "msal>=1.0.0",
    "requests>=2.31.0",
    "litellm>=1.75.5",
]

[[tool.uv.index]]
name = "pypi"
publish-url = "https://elilillyco.jfrog.io/artifactory/api/pypi/pypi"
url = "https://elilillyco.jfrog.io/artifactory/api/pypi/pypi/simple"
default = true